icon size adjusted

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                     <hr>
                 </div>
                 <div class="card">
-                    <h2>Full Stack Engineer</h2>
-                    <h3>HSBC</h3>
+                    <h2>Data Engineer</h2>
+                    <h3>Dell</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae voluptatibus minus velit, maxime optio voluptas laborum iste explicabo illum, totam necessitatibus. Praesentium sunt voluptatum adipisci ipsa magni possimus ut aliquid.</p>
                     <a class="button" href="">Quick Apply</a>
                     <div class="logo-recruiter">
@@ -114,8 +114,17 @@
                     </div>
                 </div>
                 <div class="card">
-                    <h2>Full Stack Engineer</h2>
-                    <h3>HSBC</h3>
+                    <h2>Tech Sales Rep</h2>
+                    <h3>Nestle</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae voluptatibus minus velit, maxime optio voluptas laborum iste explicabo illum, totam necessitatibus. Praesentium sunt voluptatum adipisci ipsa magni possimus ut aliquid.</p>
+                    <a class="button" href="">Quick Apply</a>
+                    <div class="logo-recruiter">
+                        <img src="./images/main/logo-hsbc.svg" alt="">
+                    </div>
+                </div>
+                <div class="card">
+                    <h2>UX Strategist</h2>
+                    <h3>Garmin</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae voluptatibus minus velit, maxime optio voluptas laborum iste explicabo illum, totam necessitatibus. Praesentium sunt voluptatum adipisci ipsa magni possimus ut aliquid.</p>
                     <a class="button" href="">Quick Apply</a>
                     <div class="logo-recruiter">
