--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae voluptatibus minus velit, maxime optio voluptas laborum iste explicabo illum, totam necessitatibus. Praesentium sunt voluptatum adipisci ipsa magni possimus ut aliquid.</p>
                     <a class="button" href="">Quick Apply</a>
                     <div class="logo-recruiter">
-                        <img src="./images/main/logo-hsbc.svg" alt="">
+                        <img src="./images/main/logo-dell.png" width="150px" alt="">
                     </div>
                 </div>
                 <div class="card">
@@ -110,7 +110,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae voluptatibus minus velit, maxime optio voluptas laborum iste explicabo illum, totam necessitatibus. Praesentium sunt voluptatum adipisci ipsa magni possimus ut aliquid.</p>
                     <a class="button" href="">Quick Apply</a>
                     <div class="logo-recruiter">
-                        <img src="./images/main/logo-hsbc.svg" alt="">
+                        <img src="./images/main/logo-hsbc.svg" width="150px" alt="">
                     </div>
                 </div>
                 <div class="card">
@@ -119,7 +119,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae voluptatibus minus velit, maxime optio voluptas laborum iste explicabo illum, totam necessitatibus. Praesentium sunt voluptatum adipisci ipsa magni possimus ut aliquid.</p>
                     <a class="button" href="">Quick Apply</a>
                     <div class="logo-recruiter">
-                        <img src="./images/main/logo-hsbc.svg" alt="">
+                        <img src="./images/main/logo-purina.svg" width="150px" alt="">
                     </div>
                 </div>
                 <div class="card">
@@ -128,7 +128,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae voluptatibus minus velit, maxime optio voluptas laborum iste explicabo illum, totam necessitatibus. Praesentium sunt voluptatum adipisci ipsa magni possimus ut aliquid.</p>
                     <a class="button" href="">Quick Apply</a>
                     <div class="logo-recruiter">
-                        <img src="./images/main/logo-hsbc.svg" alt="">
+                        <img src="./images/main/logo-garmin.svg" width="150px" alt="">
                     </div>
                 </div>
             </div>
