--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="card">
                     <h2>Data Engineer</h2>
                     <h3>Dell</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae voluptatibus minus velit, maxime optio voluptas laborum iste explicabo illum, totam necessitatibus. Praesentium sunt voluptatum adipisci ipsa magni possimus ut aliquid.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae voluptatibus minus velit, maxime optio voluptas laborum iste explicabo illum, totam necessitatibus. </p>
                     <a class="button" href="">Quick Apply</a>
                     <div class="logo-recruiter">
                         <img src="./images/main/logo-dell.png" width="150px" alt="">
@@ -107,7 +107,7 @@
                 <div class="card">
                     <h2>Full Stack Engineer</h2>
                     <h3>HSBC</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae voluptatibus minus velit, maxime optio voluptas laborum iste explicabo illum, totam necessitatibus. Praesentium sunt voluptatum adipisci ipsa magni possimus ut aliquid.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae voluptatibus minus velit, maxime optio voluptas laborum iste explicabo illum, totam necessitatibus. </p>
                     <a class="button" href="">Quick Apply</a>
                     <div class="logo-recruiter">
                         <img src="./images/main/logo-hsbc.svg" width="150px" alt="">
@@ -116,7 +116,7 @@
                 <div class="card">
                     <h2>Tech Sales Rep</h2>
                     <h3>Nestle</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae voluptatibus minus velit, maxime optio voluptas laborum iste explicabo illum, totam necessitatibus. Praesentium sunt voluptatum adipisci ipsa magni possimus ut aliquid.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae voluptatibus minus velit, maxime optio voluptas laborum iste explicabo illum, totam necessitatibus. </p>
                     <a class="button" href="">Quick Apply</a>
                     <div class="logo-recruiter">
                         <img src="./images/main/logo-purina.svg" width="150px" alt="">
@@ -125,7 +125,79 @@
                 <div class="card">
                     <h2>UX Strategist</h2>
                     <h3>Garmin</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae voluptatibus minus velit, maxime optio voluptas laborum iste explicabo illum, totam necessitatibus. Praesentium sunt voluptatum adipisci ipsa magni possimus ut aliquid.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae voluptatibus minus velit, maxime optio voluptas laborum iste explicabo illum, totam necessitatibus.</p>
+                    <a class="button" href="">Quick Apply</a>
+                    <div class="logo-recruiter">
+                        <img src="./images/main/logo-garmin.svg" width="150px" alt="">
+                    </div>
+                </div>
+                <div class="card">
+                    <h2>Data Engineer</h2>
+                    <h3>Dell</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae voluptatibus minus velit, maxime optio voluptas laborum iste explicabo illum, totam necessitatibus. </p>
+                    <a class="button" href="">Quick Apply</a>
+                    <div class="logo-recruiter">
+                        <img src="./images/main/logo-dell.png" width="150px" alt="">
+                    </div>
+                </div>
+                <div class="card">
+                    <h2>Full Stack Engineer</h2>
+                    <h3>HSBC</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae voluptatibus minus velit, maxime optio voluptas laborum iste explicabo illum, totam necessitatibus. </p>
+                    <a class="button" href="">Quick Apply</a>
+                    <div class="logo-recruiter">
+                        <img src="./images/main/logo-hsbc.svg" width="150px" alt="">
+                    </div>
+                </div>
+                <div class="card">
+                    <h2>Tech Sales Rep</h2>
+                    <h3>Nestle</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae voluptatibus minus velit, maxime optio voluptas laborum iste explicabo illum, totam necessitatibus. </p>
+                    <a class="button" href="">Quick Apply</a>
+                    <div class="logo-recruiter">
+                        <img src="./images/main/logo-purina.svg" width="150px" alt="">
+                    </div>
+                </div>
+                <div class="card">
+                    <h2>UX Strategist</h2>
+                    <h3>Garmin</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae voluptatibus minus velit, maxime optio voluptas laborum iste explicabo illum, totam necessitatibus.</p>
+                    <a class="button" href="">Quick Apply</a>
+                    <div class="logo-recruiter">
+                        <img src="./images/main/logo-garmin.svg" width="150px" alt="">
+                    </div>
+                </div>
+                <div class="card">
+                    <h2>Data Engineer</h2>
+                    <h3>Dell</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae voluptatibus minus velit, maxime optio voluptas laborum iste explicabo illum, totam necessitatibus. </p>
+                    <a class="button" href="">Quick Apply</a>
+                    <div class="logo-recruiter">
+                        <img src="./images/main/logo-dell.png" width="150px" alt="">
+                    </div>
+                </div>
+                <div class="card">
+                    <h2>Full Stack Engineer</h2>
+                    <h3>HSBC</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae voluptatibus minus velit, maxime optio voluptas laborum iste explicabo illum, totam necessitatibus. </p>
+                    <a class="button" href="">Quick Apply</a>
+                    <div class="logo-recruiter">
+                        <img src="./images/main/logo-hsbc.svg" width="150px" alt="">
+                    </div>
+                </div>
+                <div class="card">
+                    <h2>Tech Sales Rep</h2>
+                    <h3>Nestle</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae voluptatibus minus velit, maxime optio voluptas laborum iste explicabo illum, totam necessitatibus. </p>
+                    <a class="button" href="">Quick Apply</a>
+                    <div class="logo-recruiter">
+                        <img src="./images/main/logo-purina.svg" width="150px" alt="">
+                    </div>
+                </div>
+                <div class="card">
+                    <h2>UX Strategist</h2>
+                    <h3>Garmin</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae voluptatibus minus velit, maxime optio voluptas laborum iste explicabo illum, totam necessitatibus.</p>
                     <a class="button" href="">Quick Apply</a>
                     <div class="logo-recruiter">
                         <img src="./images/main/logo-garmin.svg" width="150px" alt="">
